--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@ aiohttp==3.8.4
 aiosignal==1.3.1
 alabaster
 altair==5.1.2
-anaconda-client==1.11.1
-anaconda-navigator==2.4.0
-anaconda-project
+anaconda-client==1.1.1
+#anaconda-navigator
+#anaconda-project
 anyio==3.7.1
 appdirs==1.4.4
 applaunchservices
@@ -44,20 +44,20 @@ charset-normalizer
 chroma-py==0.1.0.dev1
 click
 cloudpickle
-clyent==1.2.2
+clyent==1.2.1
 colorama
 colorcet
 colour==0.1.5
 comm
-conda==23.3.1
-conda-build==3.23.3
-conda-content-trust
-conda-pack
-conda-package-handling
-conda-repo-cli==1.0.27
-conda-token
-conda-verify==3.4.2
-conda_package_streaming
+#conda==23.3.1
+#conda-build==3.23.3
+#conda-content-trust
+#conda-pack
+#conda-package-handling
+#conda-repo-cli==1.0.27
+#conda-token
+#conda-verify==3.4.2
+#conda_package_streaming
 confluent-kafka==2.3.0
 constantly==15.1.0
 contourpy
@@ -68,7 +68,7 @@ cycler
 cytoolz
 dask
 datashader
-datashape==0.5.4
+datashape==0.5.2
 debugpy
 decorator
 defusedxml
